sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.error
AlgGnomeSort:4: error: not found: value getNombrevaleurs
	while(i!=getNombrevaleurs()){
                 ^