sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.code
def gnomeSort() {
	var i=0
	while(i!=getNombrevaleurs()){
		if(i==0){
			i=i+1
		}
		if(plusPetit(i-1,i)){
			i=i+1
		
		}else{
			echange(i-1,i)
			i=i-1
		}
	}
}